# ndkdemo

app/: build.gradle
app/src/androidTest/java/com/fsly/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIDemo.cpp  JNIDynamicRegisterDemo.cpp  JNIDynamicRegisterDemo.h  JNIHello.c  com_fsly_ndkdemo_JNIDemo.h  native-lib.cpp
app/src/main/java/com/fsly/ndkdemo/: JNIDemo.java  JNIDynamicRegisterDemo.java  JNISayHello.java  MainActivity.java
app/src/test/java/com/fsly/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
